第三次测试提交

--- a/README
+++ b/README
@@ -1,2 +1,8 @@
 ############这里是git的复习笔记############
 git:目前世界上最先进的分布式版本控制系统,git is free software.
+git log --pretty-oneline    可以简洁的看提交日志（commit的次数）
+git diff <filename>
+(1)如果修改了文件但是还没有将其 add （暂存），那么就是比较的当前文件和上次提交的版本之间的差异。
+(2)如果已经将文件 add （暂存了），但是还没有 commit （提交）， 那么就是比较的暂存区和上次提交的版本之间的差异。
+(3)如果想比较已经提交的版本和当前工作区的差异，可以使用 git diff HEAD命令。
+
