第五次提交测试

--- a/README
+++ b/README
@@ -5,4 +5,5 @@ git diff <filename>
 (1)如果修改了文件但是还没有将其 add （暂存），那么就是比较的当前文件和上次提交的版本之间的差异。
 (2)如果已经将文件 add （暂存了），但是还没有 commit （提交）， 那么就是比较的暂存区和上次提交的版本之间的差异。
 (3)如果想比较已经提交的版本和当前工作区的差异，可以使用 git diff HEAD命令。
-git reset --hard ...
+git reset --hard ... 其中的...就是git log 检查出来的那个提交的码.
+git reflog 可以看到所有的提交id
