--- a/README
+++ b/README
@@ -2,8 +2,8 @@
 git:目前世界上最先进的分布式版本控制系统,git is free software.
 git log --pretty-oneline    可以简洁的看提交日志（commit的次数）
 git diff <filename>
-(1)如果修改了文件但是还没有将其 add （暂存），那么就是比较的当前文件和上次提交的版本之间的差异。
-(2)如果已经将文件 add （暂存了），但是还没有 commit （提交）， 那么就是比较的暂存区和上次提交的版本之间的差异。
-(3)如果想比较已经提交的版本和当前工作区的差异，可以使用 git diff HEAD命令。
+(1) 默认是比较的工作区和暂存区的内容，如果暂存区的内容已经被提交了，那么默认就是比较的工作区和 master 里边的内容
+(2) 如果想比较工作区和 master 里面的内容，那么可以使用   git diff HEAD -- <filename>  其中 -- 和 <filename> 之间一定要有一个空格
+
 git reset --hard ... 其中的...就是git log 检查出来的那个提交的码.
 git reflog 可以看到所有的提交id
